[package]
name = "sovchat"
version = "0.1.4"
authors = ["Jack Sovern"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"